--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html, body {
   margin: 0px;
+  padding: 0;
+  height: 100%;
   font-family: Roboto, Regular;
   text-align: center;
   background: white;
@@ -82,9 +84,14 @@ html, body {
 }
 
 .füsio-ch-picture {
-  max-width: 1400px;
-  margin: 0 auto 0 auto;
+  /* max-width: 1400px;
+  margin: 0 auto 0 auto; */
   opacity: 0.6;
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .füsio-ch-logo {
